# zRPC

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: CPM.cmake  CodeCoverage.cmake  cppzmq.cmake  msgpack-c.cmake
include/: zRPC.hpp  zRPCClient.inl  zRPCPublisher.inl  zRPCServer.inl  zRPCSubscriber.inl  zRPCSupport.hpp
src/: zRPCClient.cpp  zRPCPublisher.cpp  zRPCServer.cpp  zRPCSubscriber.cpp
tests/: client.cpp  clientDetached.cpp  publisher.cpp  server.cpp  subscriber.cpp  unit.cpp
